# git-learning

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
docs/: CHEATSHEET.md  GIT-ENTERPRISE-TUTORIAL.md  README.md
docs/beginner/: 01-FOUNDATIONS.md  02-COMMIT-AND-BRANCH.md  03-REAL-FEATURE.md  04-TEAM-COLLABORATION.md  05-RECOVERY-AND-RELEASE.md  COMMAND-DICTIONARY.md  README.md  TROUBLESHOOTING.md
learning/: PROGRESS.md
scripts/: check.ps1  check.sh
src/teamflow/: __init__.py  __main__.py  cli.py  models.py  repository.py  service.py
tests/: test_cli.py  test_service.py
web/: .gitignore  README.md  package-lock.json  package.json
web/.openai/: hosting.json
web/app/: globals.css  layout.tsx
web/app/components/: LearningApp.tsx
web/content/: courses.generated.ts
web/scripts/: sync-content.mjs
web/tests/: rendered-html.test.mjs
