[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "teamflow-git-learning"
version = "0.1.0"
description = "A small ticket manager for practicing enterprise Git workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "broshenn" }
]
dependencies = []

[project.scripts]
teamflow = "teamflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

